Fixed Most Unwanted white borders from overflow

--- a/tribute.css
+++ b/tribute.css
@@ -9,10 +9,6 @@ body {
     background: #ad9d9d;
 }
 
-section {
-    margin-bottom:20px;
-}
-
 h3 {
     text-align: center;
     font-size: 30px;
@@ -93,7 +89,6 @@ h3 {
 /*Photo Carousel Hero*/
 
 
-* {box-sizing:border-box}
 
 /* Slideshow container */
 .slideshow-container {
@@ -102,7 +97,6 @@ h3 {
     min-width:450px;
     position: relative;
     margin: auto;
-    overflow: hidden;
     background-color: #fccbcb;
     box-shadow: 0 0 8px 8px #ad9d9d inset;
     border-radius: 5%;
@@ -147,17 +141,6 @@ img {
 /* On hover, add a black background color with a little bit see-through */
 .prev:hover, .prevQ:hover, .next:hover, .nextQ:hover {
   background-color: rgba(0,0,0,0.8);
-}
-
-/* Caption text */
-.text {
-  color: #f2f2f2;
-  font-size: 15px;
-  padding: 8px 12px;
-  position: absolute;
-  bottom: 8px;
-  width: 100%;
-  text-align: center;
 }
 
 /* Number text (1/3 etc) */
@@ -208,7 +191,7 @@ img {
     width: 60%;
     min-width:450px;
     height: 1000px;
-    margin: auto;
+    margin: 0 auto;
     overflow: scroll;
     background-color: #fccbcb;
     border-style: dotted;
@@ -268,7 +251,7 @@ img {
     margin: auto;
     background-color: #fccbcb;
     box-shadow: 0 0 8px 8px #ad9d9d inset;
-    overflow: scroll;
+    overflow: hidden;
 }
 
 .video-container {
@@ -293,7 +276,6 @@ iframe {
 #q-slideshow {
     position: relative;
     margin: auto;
-    overflow: hidden;
 }
 
 blockquote {
@@ -306,7 +288,7 @@ blockquote {
     display:flex;
     flex-direction:column;
     justify-content: space-around;
-    overflow:scroll;
+    overflow:hidden;
 }
 
 blockquote p {
